--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
       <h2>Últimos Artículos</h2>
       <div class="blog-grid">
         <article class="blog-card">
-          <img src="/img/articulo1.webp" alt="Imagen del artículo 1">
+          <img src="img/articulo1.webp" alt="Imagen del artículo 1">
           <div class="blog-content">
             <h3>Vuelve el Móvil Gym en el Parque San Martín con entrada libre y gratuita</h3>
             <p>Las actividades iniciarán este sábado 29 de marzo a partir de las 17:30 horas en el playón Pajarito Conde</p>
@@ -39,7 +39,7 @@
         </article>
   
         <article class="blog-card">
-          <img src="/img/articulo2.webp" alt="Imagen del artículo 2">
+          <img src="img/articulo2.webp" alt="Imagen del artículo 2">
           <div class="blog-content">
             <h3>Entrenar al aire libre.</h3>
             <p>El resurgimiento del Delivery Gym</p>
@@ -48,7 +48,7 @@
         </article>
   
         <article class="blog-card">
-          <img src="/img/articulo3.webp" alt="Imagen del artículo 3">
+          <img src="img/articulo3.webp" alt="Imagen del artículo 3">
           <div class="blog-content">
             <h3>Una joven tomó una bebida energética antes de ir al gym y sufrió varios paros cardíacos</h3>
             <p>Después de semanas en el hospital, Jazmin Garza logró sobrevivir contra todo pronóstico. Su testimonio es una advertencia sobre los peligros de ciertos productos</p>
@@ -58,6 +58,7 @@
       </div>
     </div>
   </section>
+  
   
 
  <!-- FOOTER CON NEWSLETTER Y MAPA -->
