--- a/contacto.html
+++ b/contacto.html
@@ -27,42 +27,48 @@
       <button id="toggle-dark-mode" aria-label="Alternar modo oscuro">🌓</button>
     </nav>
   </header>
-<section class="contacto" id="contacto">
-  <h2 class="fade-in">Contáctanos</h2>
-  <div class="contenedor-contacto fade-in-delayed">
-    <form class="formulario-contacto" id="form-contacto">
-      <label for="nombre">Nombre</label>
-      <input type="text" id="nombre" name="nombre" required>
-
-      <label for="email">Correo electrónico</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="mensaje">Mensaje</label>
-      <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
-
-      <button type="submit">Enviar</button>
-      <p class="mensaje-exito" id="mensaje-exito" hidden>¡Mensaje enviado con éxito!</p>
-    </form>
-
-    <div class="info-contacto">
-      <h3><i class="fa-solid fa-map-marker-alt"></i> Dirección</h3>
-      <p>Calle Fitness 123, Ciudad Activa</p>
-
-      <h3><i class="fa-solid fa-phone"></i> Teléfono</h3>
-      <p>+34 600 123 456</p>
-
-      <h3><i class="fa-solid fa-envelope"></i> Correo</h3>
-      <p>contacto@gimnasiopro.com</p>
-
-      <div class="contacto-redes">
-        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+  <section class="contacto" id="contacto">
+    <h2 class="fade-in">Contáctanos</h2>
+    <div class="contenedor-contacto fade-in-delayed">
+      <form class="formulario-contacto" id="form-contacto" novalidate>
+        <label for="nombre">Nombre</label>
+        <input type="text" id="nombre" name="nombre" required>
+        <small class="error" id="error-nombre"></small>
+  
+        <label for="email">Correo electrónico</label>
+        <input type="email" id="email" name="email" required>
+        <small class="error" id="error-email"></small>
+  
+        <label for="mensaje">Mensaje</label>
+        <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+        <small class="error" id="error-mensaje"></small>
+  
+        <button type="submit">Enviar</button>
+        <p class="mensaje-exito" id="mensaje-exito" hidden>¡Mensaje enviado con éxito!</p>
+      </form>
+  
+      <div class="info-contacto">
+        <h3><i class="fa-solid fa-map-marker-alt"></i> Dirección</h3>
+        <p>Calle Fitness 123, Ciudad Activa</p>
+  
+        <h3><i class="fa-solid fa-phone"></i> Teléfono</h3>
+        <p>+34 600 123 456</p>
+  
+        <h3><i class="fa-solid fa-envelope"></i> Correo</h3>
+        <p>contacto@gimnasiopro.com</p>
+  
+        <div class="contacto-redes">
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        </div>
       </div>
     </div>
-  </div>
-</section>
-
+  </section>
+  
+  <!-- Script de validación -->
+  <script src="js/validar-formulario.js"></script>
+  
 <!-- FOOTER CON NEWSLETTER Y MAPA -->
 <footer>
     <div class="newsletter">
